--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
     "angular2-wizard": "^0.2.2",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "jquery": "^2.2.4",
     "rxjs": "^5.1.0",
+    "tether": "^1.4.3",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
